<resources>
    <string name="app_name">Easy Car App</string>
    <string name="start_btn">Start Car App</string>
    <string name="end_btn">Restore Phone settings</string>
    <string name="enable_wifi">Enable Wifi</string>
    <string name="android_auto">Android Auto</string>
    <string name="samsung_music">Samsung Music</string>
    <string name="appwidget_text">Easy Car App</string>
    <string name="finish_config">Finish Configuration</string>
    <string name="add_widget">Add widget</string>
</resources>
