<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <RadioGroup
        android:id="@+id/wdgt_radio_group_choose_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="75dp"
        android:checkedButton="@+id/btn_android_auto"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/wdgt_btn_android_auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/android_auto" />

        <RadioButton
            android:id="@+id/wdgt_btn_samsung_music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/samsung_music" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/wdgt_check_enable_wifi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="15dp"
        android:text="@string/enable_wifi" />

    <Button
        android:id="@+id/wdgt_btn_finish_cfg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:text="@string/finish_config"/>

</RelativeLayout>